--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                         <button id="file-explorer-open-btn">
                             <i class="fas fa-bars"></i>
                         </button>
-                        <div class="header-logo animate__animated animate__bounceInLeft">NewCoder</div>
+                        <div class="header-logo animate__animated animate__bounceInLeft"><img class="logo" src="/favicon.png" /><span>NewCoder</span></div>
                     </div>
                     <div class="center">
                         <ul class="switch-mode" id="mode-select-switch">
@@ -195,7 +195,7 @@
                 <footer>
                     <div class="control-box">
                         <ul class="button-list left">
-                            <li><button id="new-project" data-tippy-content="New project"><i class="far fa-file"></i></button></li>
+                            <li><button id="new-project" data-tippy-content="New project"><img src="/images/icon/new-project.png" /></button></li>
                             <li><input type="text" id="project-name" value="myProject" placeholder="Project Name"></li>
                             <li><button id="save-project" data-tippy-content="Save project"><img src="/images/icon/save.png" /></button></li>
                             <li><button id="open-project" data-tippy-content="Open project"><img src="/images/icon/open.png" /></button></li>
