--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                         <button id="file-explorer-open-btn">
                             <i class="fas fa-bars"></i>
                         </button>
-                        <div class="header-logo animate__animated animate__bounceInLeft"><img class="logo" src="/favicon.png" /><span>NewCoder</span></div>
+                        <div class="header-logo animate__animated animate__bounceInLeft"><img class="logo" src="favicon.png" /><span>NewCoder</span></div>
                     </div>
                     <div class="center">
                         <ul class="switch-mode" id="mode-select-switch">
@@ -157,14 +157,14 @@
                     </div>
                     <div class="right">
                         <ul class="top-bar-button">
-                            <li><button id="switch-to-sim-mode" style="display: none;" data-tippy-content="Switch to Simulator Mode"><img src="/images/icon/sim.png" /></button></li>
+                            <li><button id="switch-to-sim-mode" style="display: none;" data-tippy-content="Switch to Simulator Mode"><img src="images/icon/sim.png" /></button></li>
                             <li><button id="switch-to-real-mode" style="display: none;" data-tippy-content="Switch to Real Mode"><i class="fas fa-microchip"></i></button></li>
                             <li><button id="install-pwa" style="display: none;" onclick="installPWA()" data-tippy-content="Install microBlock to your PC"><i class="fas fa-download"></i></button></li>
-                            <li><button id="open-extension-dialog" data-tippy-content="Extension"><img src="/images/icon/extension.png" /></button></li>
+                            <li><button id="open-extension-dialog" data-tippy-content="Extension"><img src="images/icon/extension.png" /></button></li>
                             <li><button id="open-dashboard" data-tippy-content="Dashboard"><i class="fas fa-chart-line"></i></button></li>
-                            <li><button id="open-example-dialog" data-tippy-content="Examples"><img src="/images/icon/examples.png" /></button></li>
+                            <li><button id="open-example-dialog" data-tippy-content="Examples"><img src="images/icon/examples.png" /></button></li>
                             <li><button id="open-help" data-tippy-content="Help"><i class="fas fa-question"></i></button></li>
-                            <li><button id="github-signin" data-tippy-content="Sign in with GihHub"><img src="/images/icon/github.png" /></button></li>
+                            <li><button id="github-signin" data-tippy-content="Sign in with GihHub"><img src="images/icon/github.png" /></button></li>
                             <li><img id="github_avatar" src="" alt="GitHub Avatar" data-tippy-content="Sign out GihHub"></li>
                             <!-- <li><button id="code-share" data-tippy-content="Share Project"><i class="fas fa-share"></i></button></li> -->
                         </ul>
@@ -195,22 +195,22 @@
                 <footer>
                     <div class="control-box">
                         <ul class="button-list left">
-                            <li><button id="new-project" data-tippy-content="New project"><img src="/images/icon/new-project.png" /></button></li>
+                            <li><button id="new-project" data-tippy-content="New project"><img src="images/icon/new-project.png" /></button></li>
                             <li><input type="text" id="project-name" value="myProject" placeholder="Project Name"></li>
-                            <li><button id="save-project" data-tippy-content="Save project"><img src="/images/icon/save.png" /></button></li>
-                            <li><button id="open-project" data-tippy-content="Open project"><img src="/images/icon/open.png" /></button></li>
+                            <li><button id="save-project" data-tippy-content="Save project"><img src="images/icon/save.png" /></button></li>
+                            <li><button id="open-project" data-tippy-content="Open project"><img src="images/icon/open.png" /></button></li>
                             <li><button id="open-github-dialog" data-tippy-content="GitHub Manager"><i class="fab fa-github"></i></button></li>
                         </ul>
                         <ul class="button-list center">
                             <li>
                                 <button id="upload-program" data-tippy-content="Upload" class="zoom">
-                                    <div><img src="/images/icon/upload.png" /></div>
+                                    <div><img src="images/icon/upload.png" /></div>
                                 </button>
                             </li>
                         </ul>
                         <ul class="button-list right">
-                            <li><button id="open-note" data-tippy-content="Open Note"><img src="/images/icon/note.png" /></button>
-                            <li><button id="open-terminal" data-tippy-content="Open Terminal"><img src="/images/icon/terminal.png" /></button></li>
+                            <li><button id="open-note" data-tippy-content="Open Note"><img src="images/icon/note.png" /></button>
+                            <li><button id="open-terminal" data-tippy-content="Open Terminal"><img src="images/icon/terminal.png" /></button></li>
                         </ul>
                     </div>
                     <div class="status-bar">
