Fixed root path

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     });
                 });
             }
-            rootPath = "/.";
+            rootPath = ".";
         }
 
         let pageParams = new URLSearchParams(location.search);
