--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -23,7 +23,7 @@
 <body>
     <header>
         <div class="left">
-            <span class="logo"><img src="images/microBlock Logo-microText.gray.svg" alt=""></span>
+            <span class="logo"><img src="../images/logo/icon-128x128.png" width="30" alt=""></span>
             <span class="title">Dashboard</span>
         </div>
         <div class="right">
