--- a/index.html
+++ b/index.html
@@ -130,6 +130,7 @@
 
         <link rel="stylesheet" href="css/simulator.css">
         <link rel="stylesheet" href="css/note.css">
+        <link rel="stylesheet" href="fonts/InriaSans.css">
         <link rel="stylesheet" href="css/style.css">
     </head>
 
