Add sign out and remember work

--- a/index.html
+++ b/index.html
@@ -167,6 +167,7 @@
                             <li><button id="open-help" data-tippy-content="Help"><i class="fas fa-question"></i></button></li>
                             <li><button id="github-signin" data-tippy-content="Sign in with GihHub"><img src="images/icon/github.png" /></button></li>
                             <li><img id="github_avatar" src="" alt="GitHub Avatar" data-tippy-content="Sign out GihHub"></li>
+                            <li><button id="sign-out" data-tippy-content="Sign out"><img src="images/icon/logout.png" /></button></li>
                             <!-- <li><button id="code-share" data-tippy-content="Share Project"><i class="fas fa-share"></i></button></li> -->
                         </ul>
                         <ul class="embed-only top-bar-button" style="display: none;">
