--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>NewCoder (old-school)</title>
+        <title>NewCoder</title>
         <meta name="description" content="Program a microcontroller with Block & MicroPython, Use without install and Free !">
-        <meta name="theme-color" content="#F1C40F" />
+        <meta name="theme-color" content="#194C66" />
         <link rel="icon" href="favicon.ico" sizes="64x64">
         <link rel="manifest" href="manifest.json">
+        <link rel="stylesheet" href="fonts/InriaSans.css">
 
         <script>
         const isElectron = navigator.userAgent.toLowerCase().indexOf("electron/") >= 0;
@@ -130,7 +131,6 @@
 
         <link rel="stylesheet" href="css/simulator.css">
         <link rel="stylesheet" href="css/note.css">
-        <link rel="stylesheet" href="fonts/InriaSans.css">
         <link rel="stylesheet" href="css/style.css">
     </head>
 
@@ -149,6 +149,10 @@
                             <i class="fas fa-bars"></i>
                         </button>
                         <div class="header-logo animate__animated animate__bounceInLeft"><img class="logo" src="favicon.png" /><span>NewCoder</span></div>
+                        <ul class="top-bar-button left-button-box">
+                            <li><button id="open-extension-dialog" data-tippy-content="Extension"><img src="images/icon/extension.png" /></button></li>
+                            <li><button id="open-example-dialog" data-tippy-content="Examples"><img src="images/icon/examples.png" /></button></li>
+                        </ul>
                     </div>
                     <div class="center">
                         <ul class="switch-mode" id="mode-select-switch">
@@ -160,10 +164,8 @@
                         <ul class="top-bar-button">
                             <li><button id="switch-to-sim-mode" style="display: none;" data-tippy-content="Switch to Simulator Mode"><img src="images/icon/sim.png" /></button></li>
                             <li><button id="switch-to-real-mode" style="display: none;" data-tippy-content="Switch to Real Mode"><i class="fas fa-microchip"></i></button></li>
-                            <li><button id="install-pwa" style="display: none;" onclick="installPWA()" data-tippy-content="Install microBlock to your PC"><i class="fas fa-download"></i></button></li>
-                            <li><button id="open-extension-dialog" data-tippy-content="Extension"><img src="images/icon/extension.png" /></button></li>
+                            <li><button id="install-pwa" style="display: none;" onclick="installPWA()" data-tippy-content="Install NewCoder to your PC"><i class="fas fa-download"></i></button></li>
                             <li><button id="open-dashboard" data-tippy-content="Dashboard"><i class="fas fa-chart-line"></i></button></li>
-                            <li><button id="open-example-dialog" data-tippy-content="Examples"><img src="images/icon/examples.png" /></button></li>
                             <li><button id="open-help" data-tippy-content="Help"><i class="fas fa-question"></i></button></li>
                             <li><button id="github-signin" data-tippy-content="Sign in with GihHub"><img src="images/icon/github.png" /></button></li>
                             <li><img id="github_avatar" src="" alt="GitHub Avatar" data-tippy-content="Sign out GihHub"></li>
