New file explorer button

--- a/index.html
+++ b/index.html
@@ -145,11 +145,9 @@
             <article class="main">
                 <header>
                     <div class="left">
-                        <button id="file-explorer-open-btn">
-                            <i class="fas fa-bars"></i>
-                        </button>
                         <div class="header-logo animate__animated animate__bounceInLeft"><img class="logo" src="favicon.png" /><span>NewCoder</span></div>
                         <ul class="top-bar-button left-button-box">
+                            <li><button id="file-explorer-open-btn" data-tippy-content="File Explorer"><img src="images/icon/menu.png" /></button></li>
                             <li><button id="open-extension-dialog" data-tippy-content="Extension"><img src="images/icon/extension.png" /></button></li>
                             <li><button id="open-example-dialog" data-tippy-content="Examples"><img src="images/icon/examples.png" /></button></li>
                         </ul>
